<?xml version="1.0" encoding="utf-8"?>
<!-- LAYOUT DESIGN FOR LOGO, EMAIL TXT, PSD TXT -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/loginScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="25dp"
        android:gravity="center_horizontal"
        android:background="@drawable/textbox_borders">

        <!-- REGISTRATION TITLE -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registration_form_title"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginTop="150dp"
            android:textColor="@color/black"
            android:layout_marginBottom="20dp"/>

        <!-- FIRST NAME TEXT BOX -->
        <EditText
            android:id="@+id/getFirstName"
            android:layout_width="match_parent"
            android:maxWidth="350dp"
            android:layout_height="60dp"
            android:background="@drawable/textbox_background"
            android:hint="@string/firstName"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textAlignment="center"
            android:textColorHint="@color/black"
            />

        <!-- EMAIL FIELD -->
        <EditText
            android:id="@+id/getRegisterEmail"
            android:layout_width="match_parent"
            android:maxWidth="350dp"
            android:layout_height="60dp"
            android:background="@drawable/textbox_background"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            android:layout_marginTop="5dp"
            android:textColorHint="@color/black"
            />

        <!-- PASSWORD FIELD -->
        <EditText
            android:id="@+id/getRegisterPassword"
            android:layout_width="match_parent"
            android:maxWidth="350dp"
            android:layout_height="60dp"
            android:background="@drawable/textbox_background"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:layout_marginTop="5dp"
            android:textColorHint="@color/black"
            />

        <!-- BUTTON REGISTER -->
        <Button
            android:id="@+id/btnSubmitRegister"
            android:layout_width="match_parent"
            android:maxWidth="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:backgroundTint="@color/standard_button_color"
            android:text="@string/register"
            android:textColor="@color/black"
            />

        <!-- BUTTON BACK -->
        <Button
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:maxWidth="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/cancel_button_color"
            android:textSize="20sp"
            android:text="@string/back_button"
            />

    </LinearLayout>
</ScrollView>
